# projeto_otimizacao

./: README.md  portfolio_optmizer.cabal
app/: Main.hs
data/: dow_returns_2024_h2.csv  dow_returns_2025_t1.csv
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: package.cache  portfolio-optimizer-0.1.0.0-inplace.conf
src/Portfolio/: ApiLoader.hs  Core.hs  CsvLoader.hs  DataLoader.hs  Simulation.hs  Types.hs  Utils.hs
